solved display visibility problem

--- a/style.css
+++ b/style.css
@@ -8,7 +8,8 @@ body {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    min-height: 100vh;
+    height: 100vh;
+    width: 100vw;
     background: linear-gradient(to top, lightgreen, lightseagreen);
 }
 h1 {
@@ -18,13 +19,14 @@ h1 {
 #main {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    justify-content: flex-end;
     align-items: center;
     width: 75vw;
     height: 50vh;
     border: solid 2.5px blue;
     border-radius: 15px;
     background-color: lightblue;
+    padding: 2.5%;
 }
 input {
     display: block;
@@ -43,7 +45,8 @@ input {
     text-align: center;
     text-transform: capitalize;
     width: 35%;
-    display: none;
+    /* height: 10%; */
+    visibility: hidden;
 }
 #submit {
     border: solid 2px green;
